<?xml version="1.0"?>
<package format="2">
  <name>hardwarelaunch</name>
  <version>0.0.1</version>
  <description>The hardwarelaunch package (ROS 2 Humble)</description>

  <maintainer email="bramblebee@todo.todo">bramblebee</maintainer>
  <license>MIT</license>

  <!-- Use ament, not catkin -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Runtime deps—replace/add whatever your script actually imports -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>diagnostic_aggregator</exec_depend>

  <!-- Linting/testing (optional but recommended) -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export/>
</package>
