<?xml version="1.0"?>
<package format="2">
  <name>hw_interface</name>
  <version>0.0.1</version>
  <description>The hw_interface package for hardware interfaces under ROS 2 Humble</description>

  <maintainer email="irlwvu@gmail.com">WVU Interactive Robotics Laboratory</maintainer>
  <author email="mpgramlich@mix.wvu.edu">Matthew Gramlich</author>
  <license>BSD</license>

  <!-- Build tool -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Dependencies -->
  <build_depend>rclcpp</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>boost</build_depend>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>pluginlib</exec_depend>
  <exec_depend>boost</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
