<?xml version="1.0"?>
<package format="2">
  <name>imu_complementary_filter</name>
  <version>1.2.3</version>
  <description>
    Filter which fuses angular velocities, accelerations, and (optionally)
    magnetic readings from a generic IMU device into a quaternion to represent
    the orientation of the device wrt the global frame.
  </description>

  <maintainer email="robertogl.valenti@gmail.com">Roberto G. Valenti</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>message_filters</depend>
  <depend>boost</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
